@@ -239,7 +239,7 @@ module WWW
         @checkboxes   = WWW::Mechanize::List.new
     
         # Find all input tags
-        form_node.search('//input').each do |node|
+        form_node.search('input').each do |node|
           type = (node['type'] || 'text').downcase
           name = node['name']
           next if name.nil? && !(type == 'submit' || type =='button')
@@ -262,13 +262,13 @@ module WWW
         end
 
         # Find all textarea tags
-        form_node.search('//textarea').each do |node|
+        form_node.search('textarea').each do |node|
           next if node['name'].nil?
           @fields << Field.new(node['name'], node.inner_text)
         end
 
         # Find all select tags
-        form_node.search('//select').each do |node|
+        form_node.search('select').each do |node|
           next if node['name'].nil?
           if node.has_attribute? 'multiple'
             @fields << MultiSelectList.new(node['name'], node)
@@ -279,7 +279,7 @@ module WWW
 
         # Find all submit button tags
         # FIXME: what can I do with the reset buttons?
-        form_node.search('//button').each do |node|
+        form_node.search('button').each do |node|
           type = (node['type'] || 'submit').downcase
           next if type == 'reset'
           @buttons << Button.new(node['name'], node['value'])
