@@ -33,13 +33,20 @@ module WWW
       end
 
       def title
-        @title ||= if parser && search('//title').inner_text.length > 0
-          search('//title').inner_text
+        @title ||= if parser && search('title').inner_text.length > 0
+          search('title').inner_text
         end
       end
 
       def parser
-        @parser ||= body && response ? Mechanize.html_parser.parse(body) : nil
+        return @parser if @parser
+
+        if body && response
+          html_body = body.length > 0 ? body : '<html></html>'
+          @parser = Mechanize.html_parser.parse(html_body)
+        end
+
+        @parser
       end
       alias :root :parser
 
@@ -80,7 +87,7 @@ module WWW
     
       def links
         @links ||= WWW::Mechanize::List.new(
-          %w{ //a //area }.map do |tag|
+          %w{ a area }.map do |tag|
             search(tag).map do |node|
               Link.new(node, @mech, self)
             end
@@ -90,7 +97,7 @@ module WWW
 
       def forms
         @forms ||= WWW::Mechanize::List.new(
-          search('//form').map do |html_form|
+          search('form').map do |html_form|
             form = Form.new(html_form, @mech, self)
             form.action ||= @uri.to_s
             form
@@ -100,7 +107,7 @@ module WWW
 
       def meta
         @meta ||= WWW::Mechanize::List.new(
-          search('//meta').map do |node|
+          search('meta').map do |node|
             next unless node['http-equiv'] && node['content']
             (equiv, content) = node['http-equiv'], node['content']
             if equiv && equiv.downcase == 'refresh'
@@ -115,19 +122,19 @@ module WWW
 
       def bases
         @bases ||= WWW::Mechanize::List.new(
-          search('//base').map { |node| Base.new(node, @mech, self) }
+          search('base').map { |node| Base.new(node, @mech, self) }
         )
       end
 
       def frames
         @frames ||= WWW::Mechanize::List.new(
-          search('//frame').map { |node| Frame.new(node, @mech, self) }
+          search('frame').map { |node| Frame.new(node, @mech, self) }
         )
       end
 
       def iframes
         @iframes ||= WWW::Mechanize::List.new(
-          search('//iframe').map { |node| Frame.new(node, @mech, self) }
+          search('iframe').map { |node| Frame.new(node, @mech, self) }
         )
       end
     end
